[package]
name = "TTP"
version = "0.1.0"
edition = "2021"

[lib]
name = "TTP"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", default-features = false }

[build_dependencies]
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"